[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Game/PauseState.gd" type="Script" id=1]
[ext_resource path="res://themes/InGameTheme.tres" type="Theme" id=2]

[sub_resource type="Animation" id=1]
resource_name = "FadeMenu"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="PauseState" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
margin_top = 180.0
margin_right = 960.0
margin_bottom = 293.0
theme = ExtResource( 2 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_right = 960.0
margin_bottom = 38.0
text = "Paused"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 58.0
margin_right = 960.0
margin_bottom = 102.0
custom_constants/separation = 40
alignment = 1

[node name="MenuButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 306.0
margin_right = 470.0
margin_bottom = 44.0
text = "Main Menu"

[node name="ContinueButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 510.0
margin_right = 654.0
margin_bottom = 44.0
text = "Continue"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
anims/FadeMenu = SubResource( 1 )
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
